# gas-simulator

./: CMakeLists.txt  common.cpp  common.h  gas_station.cpp  gas_station.h  gas_station.ui  main.cpp  options.cpp  options.h  prak_en_US.ts  request.h  request_generator.h  resources.qrc  state.h  statistics.h
